--- a/Character Level RNN for Name classification.ipynb
+++ b/Character Level RNN for Name classification.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,27 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Arabic'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.path.splitext('Arabic.txt')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +113,7 @@
        "['Khoury', 'Nahas', 'Daher', 'Gerges', 'Nazari', 'Maalouf', 'Gerges']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,10 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "X = []\n",
     "y = []\n",
     "\n",
@@ -163,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +153,7 @@
        "(20074,)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +317,7 @@
        ")"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,6 +411,7 @@
     "    \n",
     "    since = time.time()\n",
     "    epoch_loss = []\n",
+    "    epoch_acc = []\n",
     "\n",
     "    print_every = int((dataset_sizes['train']/bs)/10)\n",
     "    \n",
@@ -488,7 +470,7 @@
     "               \n",
     "                i += 1  \n",
     "                \n",
-    "            epoch_loss.append(running_loss.numpy() / dataset_sizes[phase])\n",
+    "            epoch_loss.append(running_loss / dataset_sizes[phase])\n",
     "            epoch_acc.append(running_corrects.numpy() / dataset_sizes[phase])\n",
     "\n",
     "            print('{} Loss: {:.4f} Acc: {:.4f}'.format(\n",
@@ -512,14 +494,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0/99999\n",
+      "Epoch 0/7\n",
       "----------\n",
-      "Progress: [===] "
+      "Progress: [==========] train Loss: 2.8553 Acc: 0.1843\n",
+      "val Loss: 2.8565 Acc: 0.1849\n",
+      "\n",
+      "Epoch 1/7\n",
+      "----------\n",
+      "Progress: [=======] "
      ]
     }
    ],
    "source": [
-    "epoch_loss, epoch_acc = train_model(model, criterion, optimizer, dataset_sizes,bs=1, num_epochs=100000)"
+    "epoch_loss, epoch_acc = train_model(model, criterion, optimizer, dataset_sizes,bs=1, num_epochs=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.load_state_dict(torch.load(\"model.h5\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "our model got 74.71% accuracy on the training dataset and 73.77% accuracy on the validation dataset. we can plot a graph of the loss and learning rate as they progress over the epochs. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'epoch_loss' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-a84088a695b6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# plot loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mepoch_loss\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mval_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mepoch_loss\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'epoch_loss' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# plot loss\n",
+    "accuracy = epoch_acc[::2]\n",
+    "val_accuracy = epoch_acc[1::2]\n",
+    "loss = epoch_loss[::2]\n",
+    "val_loss = epoch_loss[1::2]"
    ]
   },
   {
@@ -527,7 +575,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#plot accuracy\n",
+    "plt.figure()\n",
+    "plt.plot(accuracy, label = 'Training Accuracy')\n",
+    "plt.plot(val_accuracy, label = 'Validation Accuracy')\n",
+    "plt.title('Accuray')\n",
+    "plt.xlabel('epochs')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot loss\n",
+    "plt.figure()\n",
+    "plt.plot(loss, label = 'Training Loss')\n",
+    "plt.plot(val_loss, label = 'Validation Loss')\n",
+    "plt.title('Loss')\n",
+    "plt.xlabel('epochs')\n",
+    "plt.ylabel('loss')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save the model to disk\n",
+    "torch.save(model.state_dict(), 'models/model.pt')"
+   ]
   }
  ],
  "metadata": {
