--- a/notebooks/Character Level RNN for Name classification.ipynb
+++ b/notebooks/Character Level RNN for Name classification.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "(20074,)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,6 +280,7 @@
     "        super(RNN, self).__init__()\n",
     "        \n",
     "        self.hidden_size = hidden_size\n",
+    "        self.n_hidden = hidden_size\n",
     "        \n",
     "        self.input_to_hidden = nn.Linear(input_size + hidden_size, hidden_size)\n",
     "        self.input_to_output = nn.Linear(input_size + hidden_size, output_size)\n",
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +318,7 @@
        ")"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
