fix error in file path

--- a/notebooks/Character Level RNN for Name classification.ipynb
+++ b/notebooks/Character Level RNN for Name classification.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "Once you download the data, it consists of 18 files named as ```[language].txt``` each file contains a set of names that originated from this language.\n",
     "\n",
-    "<img src=\"images/languages.PNG\" width=\"200px\" />"
+    "<img src=\"./images/languages.PNG\" width=\"200px\" />"
    ]
   },
   {
